Bugfix: Footer formatting

--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
       <p id="docError" class="error" hidden></p>
     </section>
 
-    <footer class="footer">
-    <p>
-        Footer text: Minimal static template powered by Markdown
-    </p>
-    </footer>
+
 
   </main>
+    <footer class="footer">
+    <div class="container">
+        <p>Footer text: Minimal static template powered by Markdown</p>
+    </div>
+    </footer>
 
   <script src="app.js" defer></script>
 </body>
