--- a/viewer.html
+++ b/viewer.html
@@ -38,12 +38,12 @@
 
       <p id="viewerError" class="error" hidden></p>
     </section>
-
-    <footer class="footer">
-      <p>Tip: share this page URL — each doc has its own link.</p>
-    </footer>
   </main>
-
+    <footer class="footer">
+    <div class="container">
+        <p>Tip: share this page URL — each doc has its own link.</p>
+    </div>
+    </footer>
   <script src="viewer.js" defer></script>
 </body>
 </html>
