Feat: Fixed glow

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <div class="bg-glow" aria-hidden="true"></div>
+    <div class="bg-mask" aria-hidden="true"></div>
     <header class="site-header">
     <div class="container header-inner">
         <a class="brand" href="index.html">Template</a>
